fix: map, default image schema, logo alignment

--- a/apps/ui/src/Components/Header/Header.module.css
+++ b/apps/ui/src/Components/Header/Header.module.css
@@ -22,6 +22,10 @@
   font-size: 14px;
 }
 
+.logo svg {
+  display: block;
+}
+
 .button {
   border-radius: 18px;
   height: 36px;
